unpackaged/main/default/objects/Help_Guide_Node_Draft__c/Help_Guide_Node_Draft__c.object-meta.xml
<CustomObject>
    <description>A question node within a Help Guide draft. Detail of Help_Guide_Draft__c.</description>
    <label>Help Guide Node Draft</label>
    <nameField>
        <displayFormat>HGN-{0000}</displayFormat>
        <label>Node Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Help Guide Node Drafts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>