unpackaged/main/default/objects/Help_Guide_Node_Draft__c/fields/Guide__c.field-meta.xml
<CustomField>
    <fullName>Guide__c</fullName>
    <label>Guide</label>
    <referenceTo>Help_Guide_Draft__c</referenceTo>
    <relationshipLabel>Help Guide Node Drafts</relationshipLabel>
    <relationshipName>Help_Guide_Node_Drafts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>