unpackaged/main/default/objects/Help_Guide_Node_Draft__c/fields/Is_Root__c.field-meta.xml
<CustomField>
    <fullName>Is_Root__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Root</label>
    <type>Checkbox</type>
</CustomField>