unpackaged/main/default/objects/Help_Guide_Node_Draft__c/fields/Node_Key__c.field-meta.xml
<CustomField>
    <fullName>Node_Key__c</fullName>
    <label>Node Key</label>
    <length>40</length>
    <type>Text</type>
</CustomField>